# zimbaverse

./: db.sqlite3  manage.py  pyproject.toml
zimbaverse/: asgi.py  settings.py  urls.py  wsgi.py
